# iris-ml-pipeline

./: .gitignore  README.md  predict_demo.py  pyproject.toml  requirements.txt  train_iris.py
iris_ml_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: create_iris_csv.py
