[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-ml-pipeline"
version = "0.1.0"
description = "Minimal Iris classification with scikit-learn: train, evaluate, save joblib, and run a prediction demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "joblib>=1.3,<2",
]

[tool.setuptools]
py-modules = ["train_iris", "predict_demo"]
